tests/js_error/source_locations/expression/update/get_property.exp
Error: 
  ┌ source_locations/expression/update/get_property.js:4:11
  |
4 |     throw new Error();
  |           ^
Stack trace:
  at get foo (source_locations/expression/update/get_property.js:4:11)
  at <global> (source_locations/expression/update/get_property.js:8:4)